10/7/15
  Fix for remove_window mapping error
  Fix for client_to_desktop mapping error

8/7/15
  Added keyboard shortcut to pop a window out from the
   tiles
  Added option in apps.conf to match window to be popped
   on opening
  Added option in the rc.conf to have useless gaps around
   the bar

7/7/15
  Reworked change_desktop()
  Fix for transient windows not being focused when clicked
   on
  Reworked how transient windows are handled
  Fixed window visibilty in fullscreen mode

5/7/15
  Reworked maprequest()

22/6/15
  init_desks in update_config so room for bar not used
   on not barmon

18/6/15
  Fix for bar not working on monitor 2
  Default SHOW_BAR to 0 in rc

17/6/15
  Fix for transient child window not being placed on
   desktop with parent if other desktop is focused
  Fix for occasional crash 'cause don't xfree after return!

30/5/15
  Added useless gaps to the three tiling modes

28/5/15
  Don't take bar height of screen height if show_bar == 1

23/5/15
  Fix for bar not starting on the right monitor
  Added option in rc file to set SHOW_BAR for each
   desktop like DEFAULTMODE

24/3/15
  Fix for bar not toggling after monitor disconnect

29/11/14
  Allow one window on a desktop in stacking mode to
   be resized horizontally

12/11/14
  Add ability to handle monitor connects/disconnects
  Some minor bug fixes
  Moved event functions to events.c 'cause who likes
   scrolling through large files...

20/10/14
  Add option for application name(WM_NAME) to be used in
   apps.conf
  Add transient windows to applications that can be used
   in apps.conf
  Fix for spaces in application names used in apps.conf
  More code tidying in buttonpress()

13/3/14
  Code tidy in buttonpress()

4/3/14
  Right click an unfocused desktop in the switcher to move
   the focused window to that desktop

1/3/14
  Add option in rc.conf to select which desktop to start on

22/2/14
  Don't manage dock apps with '_NET_WM_WINDOW_TYPE_DOCK' set

20/2/14